[gd_scene load_steps=24 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Blob.png" type="Texture" id=3]
[ext_resource path="res://Jump.wav" type="AudioStream" id=4]
[ext_resource path="res://fly.png" type="Texture" id=5]
[ext_resource path="res://Bruh.wav" type="AudioStream" id=6]
[ext_resource path="res://Hit_01.wav" type="AudioStream" id=7]
[ext_resource path="res://Hatch_01.wav" type="AudioStream" id=8]
[ext_resource path="res://Fart_01.wav" type="AudioStream" id=9]
[ext_resource path="res://ambient-piano-10781.mp3" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 29, 29 )

[sub_resource type="CircleShape2D" id=20]
radius = 30.2655

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 1.7
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.87, 1.65 ),
"transitions": PoolRealArray( 2.2974, 0.499999 ),
"update": 0,
"values": [ Vector2( 1.05, 0.86 ), Vector2( 0.95, 1.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.87, 1.65 ),
"transitions": PoolRealArray( 2.2974, 0.499999 ),
"update": 0,
"values": [ Vector2( 0, 4 ), Vector2( 0.95, -2 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jump"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.06, 0.08, 0.1, 0.14, 0.16, 0.18, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 12 ), Vector2( 0, 17 ), Vector2( 0, 23 ), Vector2( 0, 32 ), Vector2( 0, 16 ), Vector2( 0, 6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Jumping"
length = 0.45
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.3, 0.44 ),
"transitions": PoolRealArray( 1, 2, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 1.5 ), Vector2( 0.5, 1.7 ), Vector2( 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachine" id=14]
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 211, 274 )
states/Jumping/node = SubResource( 10 )
states/Jumping/position = Vector2( 237, 41 )
transitions = [ "Jumping", "Idle", SubResource( 12 ), "Idle", "Jumping", SubResource( 19 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
offset = Vector2( 0.714838, -0.514765 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="AttackShape" type="Area2D" parent="."]
modulate = Color( 0, 0.47451, 0.635294, 0.431373 )
scale = Vector2( 1e-05, 1e-05 )
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="AttackShape"]
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 5 )

[node name="AttackCollider" type="CollisionShape2D" parent="AttackShape"]
shape = SubResource( 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Jumping = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -75 )
smoothing_enabled = true

[node name="ParticleSpawnPosition" type="Node2D" parent="."]
position = Vector2( 0, 28 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="LandSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="FartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="AttackSound_Overlay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="MusicSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0
pitch_scale = 1.1
autoplay = true

[connection signal="body_entered" from="AttackShape" to="." method="_on_AttackShape_body_entered"]
